# news-driven-market-reaction

./: .env.example  .gitignore  ARCHITECTURE.md  CLI_SUMMARY.md  CLI_USAGE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_NEW.md  README_OLD.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: assets.yaml
data/processed/: dataset.parquet
db/: news.db
docker/: Dockerfile
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
src/: api.py  build_dataset.py  config.py  ingest_to_sqlite.py  predict.py  train_embeddings_sklearn.py  train_transformer.py
src/market_event_ai/: __init__.py  cli.py
src/market_event_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/market_event_ai/alignment/: event_study.py
src/market_event_ai/config/: settings.py
src/market_event_ai/data/: downloaders.py  schemas.py
src/market_event_ai/evaluation/: evaluators.py
src/market_event_ai/features/: extractors.py
src/market_event_ai/labels/: generators.py
src/market_event_ai/models/: trainers.py
src/market_event_ai/portfolio/: backtesters.py
src/market_event_ai/preprocess/: preprocessors.py
src/market_event_ai/reports/: generators.py
tests/: __init__.py  test_api.py  test_build_dataset.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_downloaders.py  test_preprocessors.py
