[project]
name = "market-event-ai"
version = "0.1.0"
description = "Trading system correlating political events with ETF market movements"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Twirl1984"}
]
keywords = ["trading", "nlp", "sentiment-analysis", "backtesting", "etf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "pyarrow==18.1.0",
    "scikit-learn==1.5.2",
    "torch==2.5.1",
    "transformers==4.47.1",
    "datasets==3.2.0",
    "evaluate==0.4.3",
    "sqlite-utils==3.38",
    "pytest==8.3.4",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "yfinance==0.2.50",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "textblob==0.18.0.post0",
    "scipy==1.14.1",
    "matplotlib==3.9.3",
    "seaborn==0.13.2",
    "xgboost==2.1.3",
    "lightgbm==4.6.0",
    "click==8.1.8",
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
    "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pytest-cov==6.0.0",
]

[project.scripts]
market-event-ai = "market_event_ai.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
